--- a/mods/balm.pw.toml
+++ b/mods/balm.pw.toml
@@ -1,13 +1,13 @@
 name = "Balm (Forge Edition)"
-filename = "balm-forge-1.20.1-7.2.1.jar"
+filename = "balm-forge-1.20.1-7.3.9-all.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "a1a5e8c8d6c5bc1ee684eaba086b91244840a369"
+hash = "e041f044d707dd06a6efa2c63b39f26abf60f671"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4943500
+file-id = 5644976
 project-id = 531761
