--- a/mods/better-advancements.pw.toml
+++ b/mods/better-advancements.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Advancements"
-filename = "BetterAdvancements-1.20.1-0.3.2.162.jar"
+filename = "BetterAdvancements-Forge-1.20.1-0.4.2.10.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "2bfee5f676aae53d1cf7721d2db2329940b97ec0"
+hash = "3c5c99f481e48fcf41223b48063af6851378e746"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4985146
+file-id = 5454907
 project-id = 272515
