--- a/mods/let-me-despawn.pw.toml
+++ b/mods/let-me-despawn.pw.toml
@@ -1,13 +1,13 @@
 name = "Let Me Despawn"
-filename = "letmedespawn-forge-1.20.x-1.2.0.jar"
+filename = "letmedespawn-forge-1.3.2b.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "5168aca016a9384a889f74f4b0082cd8b0f50abb"
+hash = "10322877eab165bd572c6352ae72be55f5fac7ee"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4826822
+file-id = 5746857
 project-id = 663477
