re-add cascades from particular, add packetfixer config

--- a/config/particular.json5
+++ b/config/particular.json5
@@ -1,6 +1,6 @@
 {
 	"waterSplash": true,
-	"cascades": false,
+	"cascades": true,
 	"waterfallSpray": true,
 	"fireflies": true,
 	"fallingLeaves": true,
